--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 cozo = "0.7.6"
+itertools = "0.12.1"
 pandoc_types = "0.6.0"
 serde = "1.0.197"
 serde_json = "1.0.114"
